20111020  Thu Oct 20 17:31:56 PDT 2011
    Bug Fixes
    * Things which look like URIs, but aren't, are now properly escaped like
      other text.  [rt.cpan.org 71658]

    New Features
    * Balanced parens in URIs are no longer stripped.  Example:
      "http://example.com/foo(bar)"  (Merten Falk)


20100505  Wed May  5 18:48:44 PDT 2010
    Test Fixes
    * Fixed t/urifind/find.t on Windows


20100504.1039  Tue May  4 10:39:23 PDT 2010
    Doc Fixes
    * Forgot to mention that we ship with urifind now.


20100504  Tue May  4 10:29:52 PDT 2010
    New Features
    * Added a urifind program. (Darren Chamberlain)
    Bug Fixes
    * The final semi-colon was being strippped form URLs found in HTML
      that ended with HTML entities. (Michael Peters)
      Example: http://google.com/search?q=&lt;html&gt;
    * URLs with leading dots, pluses and minuses are now found.
      [rt.cpan.org 57032]
      Example: stuff...http://example.com


20100211  Thu Feb 11 04:02:26 PST 2010
    Bug Fixes
    * Finding URIs inside brackets was pretty badly broken by
      the last release.  (Michael Peters)


20090319  Thu Mar 19 12:17:53 PDT 2009
    Bug Fixes
    * Schemeless now ignores the case of the TLD.

    New Features
    * Updated the list of accepted domains for finding schemeless URIs
      from the latest ICANN list.

    Docs
    * Add LICENSE section
    * Remove wildly out of date CAVEATS
    * Added an example of how to get a list of all URIs.
    * Updated INSTALL section to reflect new dependencies and Module::Build
      installation process
    * Regenerated the README file


20090316  Mon Mar 16 16:18:10 PDT 2009
    New Features
    * Added optional replacement function to find(). Now you 
      can not only replace URLs found, but also the rest of the text around
      them in one fell swoop. (Mike Schilli) [rt.cpan.org 20486]
    * Whitespace inside <...> is now ignored as per the suggestion of
      RFC 3986 appendix C. [rt.cpan.org 20483]

    Other